public/assets/css/app.css
body {
    background-color : #ECECEC;
}

.form-control {
    border-radius : 0;
    border        : none;
}

.form-group {
    margin-bottom : 10px;
}

.btn {
    border-radius : 0;
    border        : none;
}

.btn-primary {
    background-color : #DF3442;
    border           : 3px solid #fff;
    color            : #fff;
    font-size        : 1.2em;
    padding          : 3px 12px;
}

.btn-primary:hover, .btn-primary:focus {
    background-color : #aa2932;
    border           : 3px solid #fff;
}

.form-helper-links a {
    color : #fff;
}

.login-form-avatar {
    width            : 75px;
    height           : 75px;
    border-radius    : 75px;
    background-color : #fff;
    color            : #DF3442;
    font-weight      : 700;
    text-align       : center;
    vertical-align   : middle;
    line-height      : 75px;
    font-size        : 1.5em;
}

